--- a/ihatemoney/templates/edit_project.html
+++ b/ihatemoney/templates/edit_project.html
@@ -36,6 +36,10 @@
             <h5 class="d-flex w-100 justify-content-between">
                 <span class="mb-1">{{ _('Bill items') }}</span>
                 <span>
+                    <a href="{{ url_for(".feed", token=g.project.generate_token("feed")) }}" download class="badge badge-secondary">
+                        <i class="icon before-text">{{ static_include("images/globe.svg") | safe }}</i>
+                        RSS
+                    </a>
                     <a href="{{ url_for('.export_project', file='bills', format='json') }}" download class="badge badge-secondary">
                         <i class="icon before-text">{{ static_include("images/file-alt.svg") | safe }}</i>
                         JSON
